syntax = "proto3";
option go_package = "/transaction";

message OperationRequest {
  string test = 1;
}

message OperationResponse {
  bool success = 1;
  string message = 2;
}

service TransactionManager {
  rpc PerformOperation(OperationRequest) returns (OperationResponse) {}
}
